Fix header alignment

--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,7 @@ nav, h1, h2, h3, h4, h5, h6 {
 nav, footer, h1, h2, h3, h4, h5, h6, .date {
     font-family: "Source Serif Pro", "Apple Garamond", "Baskerville", "Noto Serif", "Times New Roman", Times, serif;
     font-weight: 400;
+    text-align: left;
 }
 
 nav {
